Prevent hours dropdown overflow on `small` [WEB-2404]

--- a/frontend/scss/organisms/_o-hours.scss
+++ b/frontend/scss/organisms/_o-hours.scss
@@ -63,13 +63,13 @@
   .dropdown {
     position: initial;
 
-    @include breakpoint('medium+') {
+    @include breakpoint('small+') {
       position: relative;
     }
   }
 
   .dropdown__list {
-    @include breakpoint('medium+') {
+    @include breakpoint('small+') {
       min-width: 290px;
     }
   }
